I2C2 communication with VL53L1X works !

--- a/Coupe_2019_Carte_moteur.ioc
+++ b/Coupe_2019_Carte_moteur.ioc
@@ -9,61 +9,64 @@ KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
 Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PC5
-Mcu.Pin14=PB0
-Mcu.Pin15=PF12
-Mcu.Pin16=PF13
-Mcu.Pin17=PF14
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PC5
+Mcu.Pin16=PB0
+Mcu.Pin17=PF12
+Mcu.Pin18=PF13
+Mcu.Pin19=PF14
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PD8
-Mcu.Pin21=PD9
-Mcu.Pin22=PD14
-Mcu.Pin23=PD15
-Mcu.Pin24=PG6
-Mcu.Pin25=PG7
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PA15
-Mcu.Pin34=PG11
-Mcu.Pin35=PG13
-Mcu.Pin36=PB3
-Mcu.Pin37=PB4
-Mcu.Pin38=PB5
-Mcu.Pin39=PB7
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin40=PB8
-Mcu.Pin41=PB9
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin5=PC0
-Mcu.Pin6=PC1
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=43
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PD8
+Mcu.Pin23=PD9
+Mcu.Pin24=PD14
+Mcu.Pin25=PD15
+Mcu.Pin26=PG6
+Mcu.Pin27=PG7
+Mcu.Pin28=PA8
+Mcu.Pin29=PA9
+Mcu.Pin3=PF0
+Mcu.Pin30=PA10
+Mcu.Pin31=PA11
+Mcu.Pin32=PA12
+Mcu.Pin33=PA13
+Mcu.Pin34=PA14
+Mcu.Pin35=PA15
+Mcu.Pin36=PG11
+Mcu.Pin37=PG13
+Mcu.Pin38=PB3
+Mcu.Pin39=PB4
+Mcu.Pin4=PF1
+Mcu.Pin40=PB5
+Mcu.Pin41=PB7
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin5=PH0/OSC_IN
+Mcu.Pin6=PH1/OSC_OUT
+Mcu.Pin7=PC0
+Mcu.Pin8=PC1
+Mcu.Pin9=PA1
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -224,6 +227,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
 PF12.Locked=true
 PF12.Signal=GPIO_Output
 PF13.Locked=true
@@ -281,7 +288,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
